--- a/sudungtoantu/baitap.html
+++ b/sudungtoantu/baitap.html
@@ -7,19 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script>
-    let inputWidth;
-    let inputHeight;
-
-    inputWidth = prompt("nhập chiều rộng:");
-    inputHeight = prompt("nhập chiều cao:");
-   
-    let inputHeightok = parseInt(inputHeight);
-    let inputWidthok = parseInt(inputWidth);
-    let dientich = inputHeightok * inputWidthok
-
-
-    document.write("tổng diện tích hình chữ nhật:" + dientich);
-</script>
+    <script src="javascript.js"></script>
 </body>
 </html>
