ung dung may tinh

--- a/HIENTHIDAURA/hienthidaura1.html
+++ b/HIENTHIDAURA/hienthidaura1.html
@@ -7,11 +7,18 @@
     <title>Document</title>
 </head>
 <body>
-    <button type="button" onclick="showMessage();">Click Me!</button>
 <script>
- function showMessage(){
-     alert('Xin chào!');
- }
+let i = 10;
+let f = 20.5;
+let b = "true";
+let s = "Hà Nội";
+document.write("Giá trị i = " + i);
+document.write("</br>");
+document.write("Giá trị f = "+ f);
+document.write("<br/>");
+document.write("Giá trị b =" + i);
+document.write("<br/>");
+document.write("Giá trị s =" + s);
 </script>
 </body>
 </html>
