ung dung may tinh

--- a/ungdungmaytinh-cach3/index.html
+++ b/ungdungmaytinh-cach3/index.html
@@ -25,23 +25,23 @@
             let ketqua;
             switch(a){
                 case 1:{
-                    ketqua = input1 + input2
+                    ketqua = input1 + input2;
                     break;
                 }
                 case 2:{
-                    ketqua = input1 - input2
+                    ketqua = input1 - input2;
                     break;
                 }
                 case 3:{
-                    ketqua = input1 * input2
+                    ketqua = input1 * input2;
                     break;
                 }
                 case 4:{
-                    ketqua = input1 / input2
+                    ketqua = input1 / input2;
                     break;
                 }
             }
-            document.getElementById('ketquane').innerHTML = ketqua
+            document.getElementById('ketquane').innerHTML = ketqua;
         }
     </script>
 </body>
