cau truc switch-case

--- a/ungdungmaytinh-cach3/index.html
+++ b/ungdungmaytinh-cach3/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+    <style> 
+    h2{color: darksalmon}
+    </style>
+    <h2>CACULATOR</h2>
     <form>
         <input type="text" id="nhap vao 1" value="">
         <input type="text" id="nhap vao 2" value="">
