--- a/baitap-ungdungvui-doyouloveme/index.html
+++ b/baitap-ungdungvui-doyouloveme/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ứng dụng Do You Love Me</title>
 </head>
+<style>
+
+</style>
 <body>
     <form>
         <h2 style="position:absolute;left:620px; top:250px;"/>Do you love me? </h2>
