--- a/thuchanh-sudungvonglaplongnhau/index.html
+++ b/thuchanh-sudungvonglaplongnhau/index.html
@@ -22,7 +22,7 @@ td{
 for(let i = 1;i<11;i++){
     document.write("<tr>");
     for(let j = 1;j<11;j++){
-        document.write("<td>"+i*j+"</td>");
+        document.write("<td>"+j*i+"</td>");
     }
     document.write("</tr>");
 }
