--- a/baitap-lambangcuuchuong/index.html
+++ b/baitap-lambangcuuchuong/index.html
@@ -23,7 +23,7 @@ td{
 for(let i = 1;i<11;i++){
     document.write("<tr>");
     for(let j = 1;j<11;j++){
-        document.write("<td>" + i + "x" + j + ' = ' +i*j+"</td>");
+        document.write("<td>" + j + "x" + i + ' = ' +i*j+"</td>");
     }
     document.write("</tr>");
 }
