hien thi 20 so nguyen to

--- a/baitap-hienthicacsonguyentodautien/index.html
+++ b/baitap-hienthicacsonguyentodautien/index.html
@@ -8,17 +8,18 @@
 </head>
 <body>
     <script>
-    let x1 = 0;
-    let x2 = 1;
-    let fibonaci;
-    document.write('0,1')
-    for(let i =1;i<=18;i++){
-        document.write(',');
-        fibonaci= x1 + x2;
-        document.write(fibonaci);
-        x1 = x2;
-        x2 = fibonaci;
+
+    let n = parseInt(prompt('Nhập số'))
+    function check(n){
+    for(let i=2;i<n;i++){
+    if(n%i==0){
+        return false;
     }
+    }
+    return true
+    }
+
+    
     </script>
 </body>
 </html>
