--- a/baitap-luyentapvonglap01/baitap2.html
+++ b/baitap-luyentapvonglap01/baitap2.html
@@ -19,7 +19,7 @@
             alert('Vui lòng tăng nhiệt độ')
           
         }
-        else if(a>19 && a<101){
+        else {
             alert('Nhiệt độ trong điều kiện lý tưởng')
         }
     }
