--- a/baitap-hienthicacsonguyentodautien/index.html
+++ b/baitap-hienthicacsonguyentodautien/index.html
@@ -4,22 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Hiển thị số nguyên tố</title>
 </head>
 <body>
     <script>
-
-    let n = parseInt(prompt('Nhập số'))
-    function check(n){
-    for(let i=2;i<n;i++){
-    if(n%i==0){
-        return false;
-    }
-    }
-    return true
-    }
-
     
+    function xacdinhSNT(num){
+        for(let i=2;i<num;i++){
+            if(num%i==0){
+                return false;
+            }
+        }
+        return true;
+    }
+
+
+    // function hienthiSNT(){
+        let bienchay = 0;
+        let SNTcanhienthi = prompt('Nhập số lượng số nguyên tố cần hiển thị: ');
+        let bienchaySNT = 2;
+        let ketqua = '';
+        while(bienchay<SNTcanhienthi){
+            if(xacdinhSNT(bienchaySNT)){
+                ketqua = ketqua + bienchaySNT + ' ';
+                bienchay++;
+            }
+            bienchaySNT++
+        }
+    // }
+    document.write(ketqua);
     </script>
 </body>
 </html>
