--- a/baitap-good-fast-cheap/index.html
+++ b/baitap-good-fast-cheap/index.html
@@ -35,9 +35,28 @@
             </td>
             <td> <h2>Fast</h2> </td>
         </tr>
-        <tr> <td> <h1 style="color: rgb(61, 110, 114)">Made by <br>Dat Truong Pro Vip no 1</h1> </td> </tr>
     </table>
     </div>
-    <script src="main.js"></script>
+    <script>
+	function switchFunny (serial) {
+    let good = document.getElementById('good');
+    let cheap = document.getElementById('cheap');
+    let fast = document.getElementById('fast');
+    switch (serial) {
+        case 1: {
+            if (cheap.checked==true && fast.checked==true) fast.checked= false;
+            break;
+        }
+        case 2: {
+            if (fast.checked==true && good.checked==true) good.checked= false;
+            break;
+        }
+        case 3: {
+            if (good.checked==true && cheap.checked==true) cheap.checked= false;
+                break;
+        }
+    }
+}
+	</script>
 </body>
 </html>
