--- a/baitap-luyentapvonglap02/baitap3.html
+++ b/baitap-luyentapvonglap02/baitap3.html
@@ -30,15 +30,15 @@
     //  document.write('<br>')
 
 
-     for(let i=0;i<5;i++){
-         for(let j =0;j<10;j++){
-             if(i===0 || i===4 || (i===1&j===0))
-       {
-           document.write("*");
-     }
-     }
-     document.write("<br>");
-     }
+    //  for(let i=0;i<5;i++){
+    //      for(let j =0;j<10;j++){
+    //          if(i===0 || i===4 || (i===1&j===0))
+    //    {
+    //        document.write("*");
+    //  }
+    //  }
+    //  document.write("<br>");
+    //  }
     </script>
 </body>
 </html>
