--- a/baitap-ungdungvui-fakingtextareaontyping/test.html
+++ b/baitap-ungdungvui-fakingtextareaontyping/test.html
@@ -1,38 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    <!-- <script>
-    let a = [];
-       let b = [];
-       let kq;
-       for (let i = 1; i < 10; i++) {
-           a[i - 1] = i;
-           document.write(" <br> ");
-           for (let j = 2; j < 10; j++) {
-               b[j - 1] = j;
-               kq = b[j - 1] * a[i - 1]
-               document.write(b[j - 1] + "x" + a[i - 1] + "=" + kq + " ");
-           }
-       }
-    </script> -->
-
-<script>
-let a =[];
-document.write('<table>');
-for(let i=1;i<=9;i++){
-    document.write('<tr>');
-    for(let j =2;j<=9;j++){
-        document.write('<th>'+ j + 'x' + i + '=' + j*i + '</th>')
-    }
-}
-
-</script>
-
-</body>
+<html>
+    <head>
+        <title>Faking Textarea on Typing</title>
+        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+        <script>
+            var a=new Array(),n="";
+            a[1]='T';a[2]='Ô';a[3]='I';a[4]=' ';a[5]='L';a[6]='À';a[7]=' ';a[8]='M';a[9]='Ộ';a[10]='T';a[11]=' ';a[12]='Đ';a[13]='Ứ';a[14]='A';a[15]=' ';a[16]='N';a[17]='G';a[18]='Ố';a[19]='C';a[20]='!';a[21]='!';a[22]='!';
+            function typeTextarea(){
+                t = document.f.txt.value;
+                j = t.length;
+                if(j > 0)
+                {
+                    for(var i=1; i<=j; i++)
+                    {
+                        n = n + a[i];
+                        if(i == 22)
+                        {
+                            document.f.txt.value = "";
+                            n = "";
+                        }
+                    }
+                }
+                document.f.txt.value = n;
+                n="";
+                setTimeout("typeTextarea()", 1);
+                //return false;
+            }
+        </script>
+    </head>
+    <body>
+        <center>
+            <h2>Type anthing slowly</h2>
+            <form name="f">
+                <textarea name="txt" cols="40" rows="10" onkeydown="typeTextarea();"></textarea>
+            </form>
+        </center>
+    </body>
 </html>
