--- a/baitap-luyentapvonglap02/bai3-3.html
+++ b/baitap-luyentapvonglap02/bai3-3.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
 </head>
 <body>
-    <script>
-        let length = 5;
-        let i = 1;
-        let sout =''
-        for (let i = 1; i<=length; i++) {
-            for (j=5; j>=1; j--) {
-                if (j>i) {
-                    sout += document.write("&nbsp;&nbsp;");
-                } else sout += document.write("*");
-            }
-            sout += document.write("<br>");
-        }
-    </script>
+  
+
+
+  <script>
+  for(let i =1;i<6;i++){
+    for(let j =5;j>0;j--){
+     if(i<j){
+       document.write('&nbsp;&nbsp;')
+     }else{
+       document.write('*')
+     }
+    }
+    document.write('<br>')
+  }
+  
+  </script>
 </body>
 </html>
