--- a/baitap-luyentapvonglap02/baitap3.html
+++ b/baitap-luyentapvonglap02/baitap3.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <script>
-    //    let ketqua = ''
-    //  for(let i= 1;i<=5;i++){
-    // ketqua = ketqua + "*"
-    // document.write(ketqua)
-    // document.write('<br>')   
-    //  }
+       let ketqua = ''
+     for(let i= 1;i<=5;i++){
+    ketqua = ketqua + "*"
+    document.write(ketqua)
+    document.write('<br>')   
+     }
 
 
     //  document.write('<br>')
