--- a/baitap-maytinhdongian/index.html
+++ b/baitap-maytinhdongian/index.html
@@ -14,44 +14,44 @@
         </tr>
         <tr>
             <td>
-               <button value="1" onclick="hienthi.value += value">1</button>
+               <button value="1" onclick="hienthi.value += this.value">1</button>
                 </td>
             <td>
-                <button value="2" onclick="hienthi.value += value">2</button>
+                <button value="2" onclick="hienthi.value += this.value">2</button>
                 </td>
              <td>
-                <button value="3" onclick="hienthi.value += value">3</button>
+                <button value="3" onclick="hienthi.value += this.value">3</button>
                 </td>
             <td>
-                <button value="+" onclick="hienthi.value += value">+</button>
+                <button value="+" onclick="hienthi.value += this.value">+</button>
                 </td>
         </tr>
         <tr>
                 <td>
-                    <button value="4" onclick="hienthi.value += value">4</button>
+                    <button value="4" onclick="hienthi.value += this.value">4</button>
                     </td>
                 <td>
-                    <button value="5" onclick="hienthi.value += value">5</button>
+                    <button value="5" onclick="hienthi.value += this.value">5</button>
                     </td>
                  <td>
-                    <button value="6" onclick="hienthi.value += value">6</button>
+                    <button value="6" onclick="hienthi.value += this.value">6</button>
                     </td>
                 <td>
-                    <button value="-" onclick="hienthi.value += value">-</button>
+                    <button value="-" onclick="hienthi.value += this.value">-</button>
                     </td>
             </tr>
             <tr>
                     <td>
-                        <button value="7" onclick="hienthi.value += value">7</button>
+                        <button value="7" onclick="hienthi.value += this.value">7</button>
                         </td>
                     <td>
-                        <button value="8" onclick="hienthi.value += value">8</button>
+                        <button value="8" onclick="hienthi.value += this.value">8</button>
                         </td>
                      <td>
-                        <button value="9" onclick="hienthi.value += value">9</button>
+                        <button value="9" onclick="hienthi.value += this.value">9</button>
                         </td>
                     <td>
-                        <button value="*" onclick="hienthi.value += value">x</button>
+                        <button value="*" onclick="hienthi.value += this.value">x</button>
                         </td>
                 </tr>
                 <tr>
@@ -59,13 +59,13 @@
                             <button value="C" onclick="hienthi.value = null">C</button>
                             </td>
                         <td>
-                            <button value="0" onclick="hienthi.value += value">0</button>
+                            <button value="0" onclick="hienthi.value += this.value">0</button>
                             </td>
                          <td>
                             <button value="=" onclick="hienthi.value = eval(hienthi.value)">=</button>
                             </td>
                         <td>
-                            <button value="/" onclick="hienthi.value += value">/</button>
+                            <button value="/" onclick="hienthi.value += this.value">/</button>
                             </td>
                     </tr>
 </table>
