--- a/STRING/[Bài tập] Validate account.html
+++ b/STRING/[Bài tập] Validate account.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-</head>
-<body>
-  <script>
-  regexp = /^[_a-z0-9]{6,}$/;
-  str = "123abc_"
-  if(regexp.test(str)){
-            alert('true')
-        }else
-        {
-           alert('false') 
-        }
-  </script>
-</body>
+  </head>
+  <body>
+    <script>
+      let regexp = /^[_a-z0-9]{6,}$/;
+      let str = "123abc_";
+      if (regexp.test(str)) {
+        alert("true");
+      } else {
+        alert("false");
+      }
+    </script>
+  </body>
 </html>
