--- a/STRING/[Bài tập] Validate email copy.html
+++ b/STRING/[Bài tập] Validate email copy.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <script>
-        regexp = /^[A-Za-z0-9]+[A-Za-z0-9]*@[A-Za-z0-9]+(\.[A-Za-z0-9]+)$/;
-        str = 'abc@gmail.com'
-        if(regexp.test(str)){
-            alert('true')
-        }else
-        {
-           alert('false') 
-        }
-        </script>
-</body>
+      let regexp = /^[A-Za-z0-9]+[A-Za-z0-9]*@[A-Za-z0-9]+(\.[A-Za-z0-9]+)$/;
+      let str = "abc@gmail.com";
+      if (regexp.test(str)) {
+        alert("true");
+      } else {
+        alert("false");
+      }
+    </script>
+  </body>
 </html>
