--- a/CASE-STUDY/baitapaPhuc.html
+++ b/CASE-STUDY/baitapaPhuc.html
@@ -7,15 +7,12 @@
     <title>Document</title>
     <style>
       canvas {
-        border: 1px solid blue;
-        background-image: url(pic_the_scream.jpg);
+        border: 1px solid red;
       }
     </style>
   </head>
   <body>
-    <center>
-      <canvas id="display" width="500px" height=" 700px"></canvas>
-    </center>
-    <script src="OOP-bong-chuyendong copy.js"></script>
+    <canvas id="display" width="500px" height="500px"></canvas>
+    <script src="ve qua bong chuyen dong.js"></script>
   </body>
 </html>
