--- a/GIẢI QUYẾT VẤN ĐỀ VÀ THUẬT TOÁN/test.html
+++ b/GIẢI QUYẾT VẤN ĐỀ VÀ THUẬT TOÁN/test.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <script>
-    console.log(Math.round(Math.random()*10))
+        var a = 10
+        var b = 10
+        var c = (a++) + (--b) - (b--) + (--a)
+        // alert(c)
     </script>
 </body>
 </html>
